[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "queso"
version = "0.1.0"
description = "QUBO-based office seating optimizer"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
authors = [
    { name = "Marc Breiner Sørensen", email = "mbrs@phys.au.dk" }
]
keywords = ["qubo", "optimization", "seating", "office", "annealing","quantum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "dimod>=0.12.0",
    "dwave-samplers>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",  # for FastAPI test client
]

[project.urls]
Homepage = "https://github.com/achnos/queso"
Issues = "https://github.com/achnos/queso/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/seating_optimizer"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8 naming
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=seating_optimizer --cov-report=term-missing"
